--- a/страницапяч3.css
+++ b/страницапяч3.css
@@ -9,12 +9,37 @@
     align-items: center;
     gap: 40px;
 }
+
 a {
     text-decoration: none;
     color: black;
     text-transform: capitalize;
     font-size: 20px;
 }
+
 a:hover {
     transform: scale(1.1);
+}
+
+.block6 {
+    width: 100%;
+    height: 500px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.list {
+    background-color: bisque;
+    height: 500px;
+}
+
+ul {
+    text-decoration: none;
+    color: black;
+    text-transform: capitalize;
+    font-size: 20px;
 }
