--- a/страницапяч3.css
+++ b/страницапяч3.css
@@ -43,3 +43,19 @@ ul {
     text-transform: capitalize;
     font-size: 20px;
 }
+.hidden-block{
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background-color: darkkhaki;
+    opacity: 0;
+    transition: 2s;
+    display: flex;
+    transform: rotate(0) scale(0)
+    align-items: center;
+    justify-content: center;
+}
+#check:checked ~ .hidden-block {
+    opacity: 100;
+    transform: rotate(360deg) scale(1);
+}
